[package]
name = "vrl-lsp"
version = "0.0.2"
edition = "2021"
authors = ["Arshia Soleimani", "Andrey Shibalov"]
description = "Language server for Vrl (Vector Remap Language). "

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

vrl = { version = "0.17.0"}
tower-lsp = { version = "0.20.0"}
tokio = { version = "1.39.2",  features = ["full"] }
codespan-lsp =  "0.11.1"
codespan-reporting = "0.11.1"
